--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,11 @@
 [platformio]
 default_envs = m5stick-c-plus-2, m5stick-c-plus-1-1, cardputer, lilygo-cc1101
 
+[env]
+lib_deps =
+  arduino-libraries/Arduino-IRremote
+extra_scripts = build.py
+    
 [env:m5stick-c-plus-2]
 platform = espressif32@^6.4.0
 framework = arduino
@@ -11,6 +16,7 @@ lib_deps =
     bodmer/TFT_eSPI@^2.5.43
     bblanchon/ArduinoJson@^7.0.4
     https://github.com/m5stack/M5StickCPlus2.git
+    arminjo/IRremote @ ^4.3.1 
 build_flags = 
     -DM5STICK_C_PLUS_2
     -DCONFIG_I2S_PDM_RX
@@ -34,6 +40,7 @@ build_flags =
     -DBTN_B_PIN=39
     -DBTN_C_PIN=35
     -D IR_PIN=19
+    -DIR_RX_PIN=33
 board_build.partitions = huge_app.csv
 board_build.filesystem = spiffs
 board_build.flash_mode = dio
@@ -91,6 +98,7 @@ lib_deps =
     bodmer/TFT_eSPI@^2.5.43
     bblanchon/ArduinoJson@^7.0.4
     m5stack/M5Cardputer
+    arminjo/IRremote @ ^4.3.1 
 build_flags = 
     -DM5CARDPUTER
     -DUSER_SETUP_LOADED=1
@@ -116,6 +124,7 @@ build_flags =
     -DKEY_DOT=0x37
     -DKEY_BACKTICK=0x35
     -D IR_PIN=44
+    -DIR_RX_PIN=1
 board_build.partitions = huge_app.csv
 board_build.filesystem = spiffs
 board_build.flash_mode = dio
@@ -140,17 +149,16 @@ build_flags =
   -DTFT_WIDTH=170
   -DTFT_HEIGHT=320
   -DTFT_INVERSION_ON
-  -DTFT_RGB_ORDER=1           ; <-- important on some T-Embed batches
+  -DTFT_RGB_ORDER=1
   -DTFT_BL=21
   -DTFT_CS=41
   -DTFT_DC=16
   -DTFT_RST=40
   -DTFT_MOSI=9
   -DTFT_SCLK=11
-  -DTFT_MISO=10               ; write-only, no MISO
-  -DSPI_FREQUENCY=40000000    ; start at 40MHz; bump later if stable
+  -DTFT_MISO=10               
+  -DSPI_FREQUENCY=40000000   
   -DSPI_READ_FREQUENCY=20000000
-  ; encoder + back
   -DHAS_ENCODER
   -DENCODER_INA=4
   -DENCODER_INB=5
